# win_hardware_monitor

./: .gitignore  CMakeLists.txt  README.md  build.bat
py_monitor/: Windows_Hardware_Performance_Monitor__Python_.ini  main.py  requirements.txt  run.bat  system_monitor.py  ui_renderer.py
src/: main.cpp  resource_ids.h  resources.rc  system_monitor.cpp  system_monitor.h  ui_renderer.cpp  ui_renderer.h
